tests/pos/i3302/B.scala
package test
object B {
  A(0)
}
